<resources>
    <string name="app_name">مكتبتك</string>
    <string name="getstarted">ابدأ الان </string>
    <string name="getstarted1"></string>
    <string name="getstarted2"> مكتبتك اون لاين</string>
    <string name="getstarted3">
مكتبتك اون لاين
اول تطبيق في مصر لشراء الكتب الخارجيه والادوات المدرسيه وتوصيلها الي المنزل
وتوفير الوقت والجهد وتجنب الزحمه  مع وجود خصومات وعروض وهدايا كتير لمستخدمي التطبيق
    </string>
    <string name="skippingtext">تخطي</string>
    <string name="UserName">البريد الالكتروني</string>
    <string name="pass">الرقم السري</string>
    <string name="Login"> تسجيل الدخول</string>
    <string name="forGotPass"> نسيت كلمة السر ؟ </string>
    <string name="signorRegister">Or sign up with</string>
    <string name="user">الاسم</string>
    <string name="mobil">الهاتف</string>
    <string name="Name_error">الرجاء كتابة الاسم</string>
    <string name="email_error">الرجاء كتابة الاميل</string>
    <string name="email_error2">example: admin@google.com</string>
    <string name="password_error">الرجاء كتابة الرقم السري</string>
    <string name="password_error2">الرقم السري يجيب ان يكون اكثر من  6 حروف</string>
    <string name="ErroEmailAndPass">  يرجي التأكد من الأيميل والباسورد.</string>
    <string name="Register">الاشتراك</string>
    <string name="Phone_error">الرجاء كتابة رقم الهاتف</string>
    <string name="Check_Internet">تأكد من اتصالك بالانترنت</string>
    <string name="charge">الشحن</string>
    <string name="pay">الدفع</string>
    <string name="confirm">التأكيد</string>
    <string name="firstName">الاسم الاول</string>
    <string name="secondName">الاسم الاخير</string>
    <string name="address">العنوان</string>
    <string name="Phone">رقم الهاتف</string>
    <string name="continuation">استمرار</string>
    <string name="ThanksForYourOrder">شكرا لطلبك</string>
    <string name="orderNumber">رقم طلبك</string>
    <string name="appointment">موعد الوصول</string>
    <string name="end">انتهي</string>
    <string name="trackYouOrder">تتبع طلبك هنا</string>
    <string name="buying">المشتريات</string>
    <string name="filter">تصفية</string>
    <string name="cancel">الغاء</string>
    <string name="no">لا</string>
    <string name="message">هل حقا انت متأكد ؟</string>
    <string name="yes">نعم</string>
    <string name="Ok">حسناً</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StudentName">اسم الطالب</string>
    <string name="Class">الفصل</string>
    <string name="Order">اطلب الان</string>
    <string name="offers">العروض</string>
    <string name="Categories">الاقسام</string>
    <string name="price">السعر</string>
    <string name="filterBy">تصفية حسب</string>
    <string name="FilterNow">تصفية الان</string>
    <string name="all">الكل</string>
    <string name="lessthan">اقل سعر</string>
    <string name="MoreThan">اكبر سعر</string>
    <string name="school">المدرسة</string>
    <string name="subject">المادة</string>


</resources>
