<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layoutDirection="ltr"
    tools:context="com.alaa.microprocess.lrahtk.Fragment.Search">


   <LinearLayout
    android:id="@+id/Linear1"
    android:orientation="vertical"
    android:layout_above="@+id/ln2"
    android:background="@color/color3"
    android:layout_width="match_parent"
       android:gravity="center_horizontal"
    android:layout_height="match_parent">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:elevation="8dp"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <EditText
                android:drawableStart="@drawable/ic_search_black_24dp"
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_horizontal|center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@color/white"
                android:layout_weight="10"
                />
            <ProgressBar
                android:layout_weight="1"
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/CircularProgress2"
                style="?android:attr/progressBarStyleSmall"
                android:visibility="gone"
                android:layout_marginEnd="13dp"
                />
        </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rec_search"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

 </LinearLayout>
<LinearLayout
    android:id="@+id/Linear2"
    android:orientation="vertical"
    android:layout_above="@+id/ln2"
    android:visibility="gone"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="24sp"
        android:fontFamily="@font/cairo"
        android:text="@string/filterBy"
        android:textColor="#000"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:elevation="2dp"
        android:background="@color/white"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
          android:orientation="vertical"
            android:layout_weight="1"
            android:background="@color/color2"
            android:layout_height="match_parent"
            android:elevation="1dp"
            android:layout_width="0dp">

            <TextView
                android:id="@+id/txCategories"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:fontFamily="@font/cairo"
                android:text="@string/Categories"
                android:textColor="#000"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                />
            <TextView
                android:id="@+id/txPrice"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:fontFamily="@font/cairo"
                android:text="@string/price"
                android:textColor="#000"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                />



        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="2"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:layout_width="0dp">

            <LinearLayout
                android:id="@+id/LinearRec"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/allChecked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/all"
                    android:fontFamily="@font/cairo"
                    android:textSize="18sp"
                    android:layout_margin="5dp"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rec_categories"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_marginStart="10dp"
                    android:visibility="visible"
                    android:layout_height="match_parent"

                    />

            </LinearLayout>




            <LinearLayout
                android:id="@+id/Linear_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/ETlessThan"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:fontFamily="@font/cairo"
                    android:hint="@string/lessthan"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:background="@drawable/liear_shape_in_paying"
                    android:layout_marginTop="5dp"
                    />

                <EditText
                    android:id="@+id/ETMoreThan"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:fontFamily="@font/cairo"
                    android:hint="@string/MoreThan"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:background="@drawable/liear_shape_in_paying"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:id="@+id/ln2"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/bacG"
            android:textSize="20sp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:fontFamily="@font/cairo"
            android:elevation="8dp"
            android:layout_weight="2"
            android:visibility="gone"
            />



    <Button
        android:id="@+id/btn_filter"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/rectangle_btn_background"
        android:textSize="20sp"
        android:text="@string/filter"
        android:textColor="@color/white"
        android:fontFamily="@font/cairo"
        android:elevation="8dp"
        android:layout_weight="1"
        />

    </LinearLayout>
</RelativeLayout>
